Prevent blog content from overflow

--- a/assets/mobile.scss
+++ b/assets/mobile.scss
@@ -26,7 +26,7 @@
 		
 		width: 100%;
 		
-		div {
+		> #main-blogger {
 			overflow: hidden;
 		}
 		min-height: 40 * 2 + 60px;
